After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747611 - inputselector: fix leak in gst_selector_pad_chain()
inputselector: fix leak in gst_selector_pad_chain()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-10 10:32 UTC by Guillaume Desmottes
Modified: 2015-04-10 12:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
inputselector: fix cached buffer leak in chain function (1.90 KB, patch)
2015-04-10 10:35 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2015-04-10 10:32:07 UTC
.
Comment 1 Guillaume Desmottes 2015-04-10 10:35:30 UTC
Created attachment 301265 [details] [review]
inputselector: fix cached buffer leak in chain function

gst_selector_pad_chain() was popping cached buffers out of the queue without
freeing those. Make sure we don't steal the GstBuffer as the cached buffer ref
has been passed to the pad chain function.

This can be reproduced by running the
validate.file.playback.switch_subtitle_track_while_paused.test5_mkv scenario
with Valgrind.

https://bugzilla.gnome.org/show_bug.cgi?id=747611

Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Comment 2 Thiago Sousa Santos 2015-04-10 12:35:44 UTC
Review of attachment 301265 [details] [review]:

Thanks for the patch, pushed.

commit b15e6f4bf018b92952bfecf9a94c2cbceb6e29ea
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Fri Apr 10 12:32:27 2015 +0200

    inputselector: fix cached buffer leak in chain function
    
    gst_selector_pad_chain() was popping cached buffers out of the queue without
    freeing those. Make sure we don't steal the GstBuffer as the cached buffer ref
    has been passed to the pad chain function.
    
    This can be reproduced by running the
    validate.file.playback.switch_subtitle_track_while_paused.test5_mkv scenario
    with Valgrind.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=747611
    
    Signed-off-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>